tests/integration/errors/errdefer.orng
// 119
fn main() -> Int {
    let mut x = 10
    let mut y = 10
    _ = f(&mut x, true)
    _ = f(&mut y, false)
    x + y
}

fn f(x: &mut Int, fail: Bool)->(err |)!() {
    errdefer x^ = 115
    x^ = 4
    if fail {
        return .err
    } else {
        return .ok
    }
}